--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1 {
   text-align: center;
-  color: rgb(46, 178, 239);
+  color: #f0a04b;
 }
 
 h2 {
@@ -8,7 +8,7 @@ h2 {
 }
 
 html {
-  background-color: rgb(230, 244, 37);
+  background-color: #fce7c8;
 }
 
 .html {
