--- a/Capstone-Project2/style.css
+++ b/Capstone-Project2/style.css
@@ -1,16 +1,332 @@
-body{
-    background-color: #4DC6EB;
+
+html {
+  scroll-behavior: smooth;
+  background-color: #EFF3EA;
 }
 
-button{
-    padding: 1rem;
-    font-size: 20px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color: #4DEBA7;
-    border-radius: 10px;
+.skill-box img{
+    margin-top:0px;
+    height:100px;
+    justify-self: center;
 }
 
-button a:link, a:visited, a:hover, a:active{
+.skill-icons{
+    display: grid;
+    grid-template-columns: repeat(2,150px);
+    grid-template-rows: repeat(2,150px);
+    align-items: center;
+}
+
+.intro{
+  background-color: #D9DFC6;
+}
+
+.footer p{
+  margin: 0
+}
+
+/* -------------------------------small screen------------------------------------------------------- */
+@media (max-width: 680px) {
+  .intro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 200vh;
+  }
+
+  .pfp {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 50%;
+  }
+
+  .me {
+    border-radius: 50%;
+    height: 275px;
+  }
+
+  .btn {
+    font-size: 1rem;
     text-decoration: none;
-    color: black;
+    color: white;
+    background-color: #373a40;
+    padding: 8px 30px;
+    margin: 1.5rem;
+  }
+
+  #name {
+    font-family: "Libre Baskerville", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 1.5rem;
+    margin: 1rem;
+  }
+  #headline {
+    font-family: "Libre Baskerville", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1rem;
+    margin: 1rem;
+  }
+
+  .icons {
+    display: flex;
+    gap: 20px;
+  }
+
+  .about {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    background-color: #FFFDF0;
+    width: 100%;
+  }
+
+  h2 {
+    font-family: "Libre Baskerville", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 1.5rem;
+    margin: 1rem;
+  }
+
+  #desc {
+    margin-top: 0;
+    min-width: 300px;
+    max-width: 500px;
+    font-family: "Libre Baskerville", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 12pt;
+    margin: 1rem;
+  }
+
+  #about-btn {
+    display: flex;
+    flex-direction: column;
+  }
+
+  h3{
+    font-family: "Libre Baskerville", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 1.5rem;
+    margin: 1rem;
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+
+  #skill-head {
+    margin-top: 0;
+    padding: 1.5rem;
+    text-align: center;
+    font-family: "Libre Baskerville", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 2rem;
+  }
+
+  .skills{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .inner-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+  }
+
+  .inner-box img{
+    margin-right: 1rem;
+    height: 140px;
+    width: 210px;
+    margin-bottom: 1rem;
+  }
+
+  .inner-box p{
+    margin: 0;
+    width: 300px;
+    font-size: 18px;
+  }
+
+  .skill-box{
+    margin-bottom: 80px;
+  }
+
+  .footer {
+    background-color: #FFFDF0;
+    padding: 20px;
+  }
+  
+  .footer .container {
+    width: 100%;
+    display: flex;
+  }
+  
+  .footer .icons {
+    margin-left: auto;
+  }
+
+}
+
+
+
+
+/* -------------------------------------large screen------------------------------ */
+@media (min-width: 681px) {
+  .me {
+    border-radius: 50%;
+    height: 275px;
+  }
+
+  .intro {
+    height: 100vh;
+    display: flex;
+  }
+  .pfp {
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #name {
+    font-family: "Libre Baskerville", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 2rem;
+    margin: 1rem;
+  }
+
+  #headline {
+    font-family: "Libre Baskerville", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1rem;
+    margin: 1rem;
+  }
+
+  .btn {
+    font-size: 1rem;
+    text-decoration: none;
+    color: white;
+    background-color: #373a40;
+    padding: 8px 30px;
+    margin: 1.5rem;
+  }
+
+  .icons {
+    display: flex;
+    gap: 20px;
+  }
+
+  .about {
+    background-color: #FFFDF0;
+    width: 55%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 150px;
+  }
+  h2 {
+    font-family: "Libre Baskerville", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 2.5rem;
+    margin: 1rem;
+    margin-bottom: 0;
+  }
+
+  #desc {
+    margin-top: 0;
+    min-width: 300px;
+    max-width: 500px;
+    font-family: "Libre Baskerville", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 12pt;
+    margin: 1rem;
+  }
+
+  #desc p {
+    margin-top: 0px;
+  }
+
+  #about-btn {
+    display: flex;
+    margin-top: 50px;
+  }
+
+  #skills {
+    background-color: #EFF3EA;
+  }
+  #skill-head {
+    margin-top: 0;
+    padding: 2rem;
+    text-align: center;
+    font-family: "Libre Baskerville", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 2.5rem;
+  }
+
+  h3{
+    font-family: "Libre Baskerville", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 1.5rem;
+    margin: 1rem;
+    text-align: center;
+  }
+
+  .skills{
+    display: flex;
+    align-items: center;
+  }
+
+  .inner-box{
+    display: flex;
+    justify-content: center;
+  }
+
+  .inner-box img{
+    margin-right: 1rem;
+    height: 200px;
+    width: 300px;
+  }
+
+  .inner-box p{
+    margin: 0;
+    width: 300px;
+    font-size: 18px;
+  }
+
+  .skill-box{
+    margin-bottom: 80px;
+  }
+
+  .footer {
+    background-color: #FFFDF0;
+    padding: 20px;
+  }
+  
+  .footer .container {
+    width: 100%;
+    display: flex;
+  }
+  
+  .footer .icons {
+    margin-left: auto;
+  }
+
 }
